[project]
name = "twitter-mcp"
version = "1.0.0"
description = "Twitter/X MCP Server via SocialData API - 让 Claude 能搜推文和分析社交数据"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
